# GeneticsLab

./: .flake8  .gitignore  ADVANCED_FEATURES.md  README.md  config.json  data_config.json  example_advanced_usage.py  mypy.ini  pyproject.toml  requirements.txt  schema.sql  setup.sh  test_basic_imports.py  test_ga_evolution.py  test_position_sizer_fix.py  test_position_sizer_simple.py
ga_lab/: __init__.py  __main__.py  analysis.py  backtester.py  cli.py  config.py  constants.py  data_fetcher.py  database.py  enhanced_backtester.py  indicators.py  manager.py  multi_objective.py  position_sizing.py  strategy.py  walk_forward.py
ga_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
