[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ga-lab"
version = "0.1.0"
authors = [{ name = "Your Name", email = "you@example.com" }]
description = "Standalone multi-generation genetic-algorithm laboratory"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.25",
    "pandas-ta",
]

[project.scripts]
ga-lab = "ga_lab.cli:main"

[tool.setuptools]
packages = ["ga_lab"]

[tool.black]
line-length = 120

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
